fix: Fix the sizing and flex wrap

--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,14 @@
     height: 100vh;
 }
 
-/* #gridContainer {
-    width: 160px;
-    height: 160px;
-} */
+#gridContainer {
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid black;
+    width: 42px;
+    height: 42px;
+    
+}
 
 
 /* body */
